--- a/index.html
+++ b/index.html
@@ -1,26 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Express Train Schedule</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="jumbotron">
-            <h1>Express Train Schedule</h1>
-        </div>
+      <div class="jumbotron">
+        <h1>Express Train Schedule</h1>
+      </div>
     </div>
 
+    <div class="container">
+      <div class="card">
+        <div class="card-header">Current Train Schedule</div>
+        <div class="card-body">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Train Name</th>
+                <th scope="col">Destination</th>
+                <th scope="col">Frequency (min)</th>
+                <th scope="col">Next Arrival</th>
+                <th scope="col">Minutes Away</th>
+              </tr>
+            </thead>
+            <tbody id="trainList">
+              <tr>
+                <th scope="row">Flinder Street</th>
+                <td>Richmond</td>
+                <td>25</td>
+                <td>8:10am</td>
+                <td>1</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class="container">
+      <div class="card">
+        <div class="card-header">Add Train</div>
+        <div class="card-body">
+          <form>
+            <div class="form-group">
+              <label for="trainName">Train Name</label>
+              <input
+                type="name"
+                class="form-control"
+                id="name-input"
+                aria-describedby="emailHelp"
+                placeholder="Name"
+              />
+            </div>
+            <div class="form-group">
+              <label for="destination">Destination</label>
+              <input
+                type="destination"
+                class="form-control"
+                id="destination-input"
+                placeholder="Destination"
+              />
+            </div>
+            <div class="form-group">
+              <label for="firstTrain">First Train</label>
+              <input
+                type="firstTrain"
+                class="form-control"
+                id="firstTrain-input"
+                placeholder="firstTrain"
+              />
+            </div>
+            <div class="form-group">
+              <label for="frequency">Frequency</label>
+              <input
+                type="frequency"
+                class="form-control"
+                id="frequency-input"
+                placeholder="Frequency"
+              />
+            </div>
+            <button id="submit" type="submit" class="btn btn-primary">
+              Submit
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/6.3.3/firebase-app.js"></script>
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./javascript/train-schedule.js"></script>
-</body>
+    <script
+      type="text/javascript"
+      src="./javascript/train-schedule.js"
+    ></script>
+  </body>
 </html>
