--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Express Train Schedule</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -12,6 +11,10 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <!-- Firebase References -->
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    <title>Express Train Schedule</title>
   </head>
 
   <body>
@@ -57,9 +60,9 @@
             <div class="form-group">
               <label for="trainName">Train Name</label>
               <input
-                type="name"
+                type="text"
                 class="form-control"
-                id="name-input"
+                id="train-input"
                 aria-describedby="emailHelp"
                 placeholder="Name"
               />
@@ -67,7 +70,7 @@
             <div class="form-group">
               <label for="destination">Destination</label>
               <input
-                type="destination"
+                type="text"
                 class="form-control"
                 id="destination-input"
                 placeholder="Destination"
@@ -76,7 +79,7 @@
             <div class="form-group">
               <label for="firstTrain">First Train</label>
               <input
-                type="firstTrain"
+                type="text"
                 class="form-control"
                 id="firstTrain-input"
                 placeholder="firstTrain"
@@ -85,7 +88,7 @@
             <div class="form-group">
               <label for="frequency">Frequency</label>
               <input
-                type="frequency"
+                type="text"
                 class="form-control"
                 id="frequency-input"
                 placeholder="Frequency"
@@ -98,14 +101,7 @@
         </div>
       </div>
     </div>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/6.3.3/firebase-app.js"></script>
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script
-      type="text/javascript"
-      src="./javascript/train-schedule.js"
-    ></script>
+    <script src="./javascript/train-schedule.js"></script>
   </body>
 </html>
