created a new row to display the information of the train to the table

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!-- Firebase References -->
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    <!-- Added Moment JS -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <title>Express Train Schedule</title>
   </head>
 
@@ -40,11 +42,11 @@
             </thead>
             <tbody id="trainList">
               <tr>
-                <th scope="row">Flinder Street</th>
-                <td>Richmond</td>
-                <td>25</td>
-                <td>8:10am</td>
-                <td>1</td>
+                <th scope="row"></th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
               </tr>
             </tbody>
           </table>
