added moment.js to format and calculate the minutes of the arrival of the train and next arrival time

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 class="form-control"
                 id="train-input"
                 aria-describedby="emailHelp"
-                placeholder="Name"
+                placeholder="Enter Train Name"
               />
             </div>
             <div class="form-group">
@@ -75,7 +75,7 @@
                 type="text"
                 class="form-control"
                 id="destination-input"
-                placeholder="Destination"
+                placeholder="Enter Destination"
               />
             </div>
             <div class="form-group">
@@ -84,7 +84,7 @@
                 type="text"
                 class="form-control"
                 id="firstTrain-input"
-                placeholder="firstTrain"
+                placeholder="Enter First Train Time"
               />
             </div>
             <div class="form-group">
@@ -93,7 +93,7 @@
                 type="text"
                 class="form-control"
                 id="frequency-input"
-                placeholder="Frequency"
+                placeholder="Enter Frequency In Minutes"
               />
             </div>
             <button id="submit" type="submit" class="btn btn-primary">
