--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
     <!-- Added Moment JS -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <meta http-equiv="refresh" content="60" />
     <title>Express Train Schedule</title>
   </head>
 
