added more styling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="container">
       <div class="card">
-        <div class="card-header card-header-style">Current Train Schedule</div>
+        <div class="card-header">Current Train Schedule</div>
         <div class="card-body">
           <table class="table">
             <thead>
